--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.5",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.507.0",
