--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.5",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.7",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
